# dummyIndex

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BRIEF.md  CHANGELOG.md  CONTRIBUTING.md  EQUIP_V2_CHECKLIST.md  LICENSE  README.md  SECURITY.md  V0_SCOPE.md  pyproject.toml  release-please-config.json
.context/: .gitattributes  .gitignore  HOW_TO_USE.md  INDEX.md  PROJECT.md  config.json  equipment.json  meta.json  tree.json
.context/architecture/: overview.md
.context/conventions/: coding-practices.md  data-access.md  folder-organization.md  naming.json  naming.md  testing.md
.context/equipment-evals/: dummyindex-db-specialist.suite.json  dummyindex-docs-specialist.suite.json  dummyindex-reviewer.suite.json  dummyindex-search-specialist.suite.json  dummyindex-security-specialist.suite.json  dummyindex-verify.suite.json  python-implementer.suite.json  python-tester.suite.json
.context/features/: HOW_TO_NAVIGATE.md  INDEX.json  INDEX.md  graph.html  graph.json
.context/gc/: state.json
.context/map/: files.json  symbols.json
.context/playbooks/: add-endpoint.md  add-feature.md  add-migration.md  fix-bug.md  gc-context.md  migrate-stray-docs.md  refactor.md
.context/session-memory/: core-memories.md  now.md
.context/source-docs/: INDEX.json  INDEX.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release-please.yml  release.yml  tests.yml
docs/: COMMANDS.md  CONVENTIONS.md  README.md
docs/audits/: 01-dead-broken-incomplete.md  2026-06-05-dead-broken-incomplete-audit.md
docs/brief/: 01-purpose.md  02-mental-model.md  03-architecture.md  04-data-model.md  05-council.md  06-personas.md  07-cli.md  08-skill.md  09-lifecycle.md  10-non-goals.md  11-roadmap.md  12-retrieval.md
docs/guide/: 01-purpose.md  02-mental-model.md  03-architecture.md  04-data-model.md  05-council.md  06-personas.md  07-cli.md  08-skill.md  09-lifecycle.md  10-non-goals.md  11-roadmap.md  12-retrieval.md  README.md
docs/plans/: 01-session-memory.md  2026-06-05-dummyindex-session-memory.md  2026-06-10-equip-plugin-usage-interview.md  2026-06-10-parallel-council-dispatch.md  2026-06-12-plan-plugin-annotation.md  commit-anchored-context-update.md
docs/reference/: 01-conventions.md
docs/sources/: installable-sources.md
docs/specs/: 03-build-loop-mvp-slices.md  2026-06-05-dummyindex-session-memory-design.md  2026-06-06-build-loop-mvp-slices.md  2026-06-06-build-loop-overview.md  2026-06-10-equip-plugin-manager-design.md  2026-06-10-parallel-council-dispatch-design.md  2026-06-12-plan-plugin-annotation-design.md  2026-06-16-superpowers-default-wiring-design.md
dummyindex/: __init__.py  __main__.py  codex_guidance.py
dummyindex/analysis/: __init__.py  analyze.py  benchmark.py  cluster.py  feature_naming.py  features.py  flow_naming.py  flows.py  report.py  wiki.py
dummyindex/cli/: __init__.py  _common.py  _equip_common.py  _equip_discover.py  _equip_verbs.py  _migrate.py  _usage.py  audit.py  bootstrap.py  build_loop.py  check.py  common.py  config.py  conventions.py  council.py  council_batch.py  debt.py  dev_pick.py  doc_reorg.py  enrich.py  equip.py  features.py  gc.py  guard_doc_write.py  help.py  hooks.py  init.py  memory.py  migrate.py  migrate_docs.py  onboard.py  plan_update.py  preflight.py  propose.py  query.py  reality_check.py  rebuild.py  reconcile.py  reconcile_gate.py  refresh.py  (+3 more)
dummyindex/context/: __init__.py  bootstrap.py  claude_plugins.py  claude_settings.py  cli.py  conventions.py  default_plugins.py  docs.py  drift.py  enrich.py  enums.py  features.py  git.py  graph.py  hooks.py  incremental.py  instructions.py  manifest.py  maps.py  query.py  reality_check.py  reconcile_gate.py  runner.py  source_docs.py  tree.py
dummyindex/export/: __init__.py  _common.py  _html_assets.py  common.py  graph.py
dummyindex/installer/: __init__.py  _args.py  _common.py  args.py  common.py  install.py  repair.py  uninstall.py
dummyindex/pipeline/: __init__.py  build.py  cache.py  detect.py  enums.py  export.py  extract.py  structure.py  validate.py
dummyindex/runtime/: __init__.py  hooks.py  ingest.py  manifest.py  run_log.py  security.py  serve.py  transcribe.py  watch.py
dummyindex/skills/: __init__.py  skill-aider.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-droid.md  skill-kiro.md  skill-opencode.md  skill-trae.md  skill-vscode.md  skill-windows.md  skill.md
dummyindex/usage/: __init__.py  aggregate.py  enums.py  errors.py  models.py  render.py  report.py  transcripts.py
evals/v0/: .gitignore  README.md  run_eval.py  tasks.yaml
graphify/: __init__.py  __main__.py
graphify/analysis/: analyze.py
graphify/pipeline/: export.py  extract.py  structure.py
graphify/runtime/: hooks.py  ingest.py  manifest.py  serve.py  watch.py
scripts/: release.py
tests/: conftest.py  paths.py  test_analyze.py  test_benchmark.py  test_build.py  test_cache.py  test_claude_md.py  test_cluster.py  test_confidence.py  test_detect.py  test_export.py  test_extract.py  test_feature_naming.py  test_features.py  test_flow_naming.py  test_flows.py  test_hooks.py  test_hypergraph.py  test_ingest.py  test_install.py  test_install_repair.py  test_languages.py  test_multilang.py  test_packaging_hygiene.py  test_pipeline.py  test_rationale.py  test_release_script.py  test_report.py  test_run_log.py  test_security.py  test_semantic_similarity.py  test_serve.py  test_skills_doc_hygiene.py  test_structure.py  test_transcribe.py  test_validate.py  test_watch.py  test_wiki.py
tests/analysis/: test_cluster_determinism.py
tests/cli/: test_audit_dir.py  test_check_versions.py  test_cli.py  test_cli_doc_sync.py  test_debt_cli.py  test_debt_statusline_dispatch.py  test_equip_discover_cli.py  test_equip_verb_required.py  test_gc_cli.py  test_guard_doc_write_e2e.py  test_hooks_cli.py  test_ingest_command.py  test_init_cli.py  test_migrate.py  test_migrate_docs_cli.py  test_plan_update_badge.py  test_rebuild_cli.py  test_reconcile_gate_cli.py  test_reconcile_gate_e2e.py  test_scope_vs_root.py  test_status.py  test_wire.py  (+4 more)
(+777 files in other folders)
