[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dummyindex"
version = "0.29.1"
description = "Claude Code skill — index any codebase into a .context/ folder Claude can navigate without grepping. Deterministic backbone (tree, symbols, graph, conventions) + LLM enrichment driven by the running Claude session."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ahmed Mulla" }]
keywords = ["claude", "claude-code", "skill", "context-engine", "knowledge-graph", "tree-sitter", "leiden", "llm"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "networkx",
    "tree-sitter>=0.23.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-powershell",
    "tree-sitter-elixir",
    "tree-sitter-julia",
    "tree-sitter-verilog",
]

[project.urls]
Homepage = "https://github.com/MullaAhmed/dummyindex"
Repository = "https://github.com/MullaAhmed/dummyindex"
Issues = "https://github.com/MullaAhmed/dummyindex/issues"
LinkedIn = "https://www.linkedin.com/in/ahmed-mulla/"

[project.optional-dependencies]
# Higher-quality community detection. Falls back to networkx Louvain
# when graspologic isn't installed, so this is genuinely optional.
leiden = ["graspologic; python_version < '3.13'"]
dev = ["pytest>=7", "ruff>=0.6"]
all = ["graspologic; python_version < '3.13'", "pytest>=7", "ruff>=0.6"]

[tool.ruff]
# Linter + formatter for the project (CONVENTIONS §15). Matches the codebase as
# it stands today: line length 88, oldest supported interpreter as the target.
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade, B bugbear — the
# set the existing tree already passes clean. Keep additions opt-in so a new
# rule never turns CI red without an accompanying sweep.
select = ["E", "F", "I", "W", "UP", "B"]
# The formatter treats line length as a wrapping target, not a hard limit, and
# intentionally leaves some strings, comments, and other constructs unchanged.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Override pytest's default norecursedirs: the default list contains "build",
# which would silently skip tests/context/build/ (the mirror of
# dummyindex/context/build/). Collection is rooted at tests/ via testpaths,
# so dropping "build"/"dist" from the skip list is safe here.
norecursedirs = [".*", "__pycache__", "fixtures"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[project.scripts]
dummyindex = "dummyindex.__main__:main"

[tool.uv]
# Install via: uv tool install dummyindex
# Run without installing: uvx dummyindex install
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dummyindex*"]

[tool.setuptools.package-data]
dummyindex = [
    "skills/*.md",
    "skills/agents/*.md",
    "skills/commands/*.md",
    "skills/council/*.md",
    "skills/retrieval/*.md",
    "skills/memory/*.md",
    "skills/plan/*.md",
    "skills/equip/*.md",
    "skills/equip/templates/*",
    "skills/build/*.md",
    "skills/audit/*.md",
    "skills/audit/agents/*.md",
    "skills/statusline/*.sh",
    "skills/statusline/*.ps1",
    "skills/update/*.md",
    "context/schemas/*.json",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
